Changed css to fix search on firefox

--- a/kez.css
+++ b/kez.css
@@ -35,7 +35,8 @@ a{
     color:#40B0FF;
 }
 .pitch-accent{
-    display:inline;
+    display: inline-block;
+    position: relative;
 }
 span.marking,marking{
     border-top:solid transparent 1px;
@@ -50,14 +51,13 @@ span.drop,span.overline,span.drop,span.overline{
     padding-right: 0.1em;
     padding-top: 0.05em;
 }
-span.drop::after,span.drop::after{
-    background:#dc3545;
-    content:"";
-    height:6px;
-    left:100%;
-    position:absolute;
-    top:-1px;
-    width:1px
+span.drop-line{
+    border-color: #dc3545;
+    top: 0.08em;
+    position: absolute;
+    height: 6px;
+    border-left-width: 1px;
+    border-left-style: solid;
 }
 h1{
     text-align:center;
