--- a/orange.css
+++ b/orange.css
@@ -13,30 +13,21 @@ body{
     color:#eee;
     background:#212121
 }
-h1 a.anchor,
-h2 a.anchor,
-h3 a.anchor,
-h4 a.anchor,
-h5 a.anchor,
-h6 a.anchor{
+h1 a.anchor,h2 a.anchor,h3 a.anchor,h4 a.anchor,h5 a.anchor,h6 a.anchor{
 margin-left: 0.5rem;
 opacity:0;
 position: absolute;
 transition: opacity 0.2s linear;
 }
-h1:hover a.anchor,
-h2:hover a.anchor,
-h3:hover a.anchor,
-h4:hover a.anchor,
-h5:hover a.anchor,
-h6:hover a.anchor{
+h1:hover a.anchor,h2:hover a.anchor,h3:hover a.anchor,h4:hover a.anchor,h5:hover a.anchor,h6:hover a.anchor{
 opacity:1;
 }
 a{
     color:#40B0FF;
 }
 .pitch-accent{
-    display:inline;
+    display: inline-block;
+    position: relative;
 }
 span.marking,marking{
     border-top:solid transparent 1px;
@@ -47,61 +38,41 @@ span.marking,marking{
 }
 span.drop,span.overline,span.drop,span.overline{
     border-top:solid #dc3545 1px;
-    position:relative;
+    position: relative;
     padding-right: 0.1em;
     padding-top: 0.05em;
 }
-span.drop::after,span.drop::after{
-    background:#dc3545;
-    content:"";
-    height:6px;
-    left:100%;
-    position:absolute;
-    top:-1px;
-    width:1px
+span.drop-line{
+    border-color: #dc3545;
+    top: 0.08em;
+    position: absolute;
+    height: 6px;
+    border-left-width: 1px;
+    border-left-style: solid;
 }
 h1{
     text-align:center;
     font-size:1.95em
 }
-h2{
+h2,h3,h4,h5{
     display:block;
-    font-size:1.5em;
     margin-block-start:.83em;
     margin-block-end:.83em;
     margin-inline-start:0;
     margin-inline-end:0;
     font-weight:700
+}
+h2{
+    font-size:1.5em;
 }
 h3{
-    text-align: left;
-    display:block;
     font-size:1.5em;
-    margin-block-start:.83em;
-    margin-block-end:.83em;
-    margin-inline-start:0;
-    margin-inline-end:0;
-    font-weight:700
 }
 h4{
-    text-align: left;
-    display:block;
     font-size:2.0em;
-    margin-block-start:.83em;
-    margin-block-end:.83em;
-    margin-inline-start:0;
-    margin-inline-end:0;
-    font-weight:700
 }
 h5{
-    text-align: left;
-    display:block;
     font-size:1.5em;
-    margin-block-start:.83em;
-    margin-block-end:.83em;
-    margin-inline-start:0;
-    margin-inline-end:0;
-    font-weight:700
 }
 p{
     margin:.67em 0 1em
